update user to 2
